--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -12,9 +12,14 @@ $blue: #0da6f3;
 $red: #cb0000;
 $green:#329f00;
 $negro: #080808;
-
+$grisBlack: #333333;
+$grisFolder: #777777;
+$grisInput: #D5D5D5;
 $white: #FFFFFF;
-$gris: #e1e1e1;
+$redTurques: #C14A4A;
+$redHover:#e34b4b;
+
+
 $gap: 5rem;
 
 
