--- a/src/scss/components/_Account.scss
+++ b/src/scss/components/_Account.scss
@@ -40,7 +40,7 @@
             padding: 2rem;
             width: 50%;
         }
-        .button{
+        & .button{
             padding: 0;
             background-color: v.$redTurques;
             color:v.$white;
