--- a/src/scss/components/_Account.scss
+++ b/src/scss/components/_Account.scss
@@ -20,9 +20,14 @@
         height: 75vh;
         margin: auto;
     }
+    .error{
+        background-color: red;
+        color: black;
+    }
     .logo{
         background-color: v.$white;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
@@ -58,6 +63,11 @@
             margin-top: 1.6rem;
             color: #C8C8C8;
             text-decoration:underline;
+            cursor: pointer;
+            transition: all 0.5s;
+            &:hover{
+                color: white ;
+            }
         }
         .password{
             font-size: 1.2rem;
@@ -66,9 +76,15 @@
         .informaty{
             font-size: 1.6rem;
             color: #C8C8C8;
+            
         }
         .resalt{
             color: #CF5555;
+            cursor: pointer;
+            transition: all 0.5s;
+            &:hover{
+                color: #eb5555; ;
+            }
         }
     }
 }
