--- a/src/scss/components/_Account.scss
+++ b/src/scss/components/_Account.scss
@@ -61,6 +61,10 @@
             font-weight: v.$bold;
             margin-top: 2rem;
             cursor: pointer;
+            border: none;
+            -webkit-box-shadow: 6px 5px 6px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 6px 5px 6px 0px rgba(0,0,0,0.75);
+            box-shadow: 6px 5px 6px 0px rgba(0,0,0,0.75);
             &:hover{
                 background-color: v.$redHover;
                 transition: 1.4s all;
